Moved gradient testing to test files, added test cases for test_g_grad.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,8 @@ requires-python = ">=3.8"
 # This section tells Python: "Look inside 'src' to find my packages"
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
