--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,42 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "gridfw"
 version = "0.1.0"
-description = "Gradient Framework for CSSP"
+description = "Gradient Framework for Column Subset Selection Problem (CSSP)"
+readme = "README.md"
 requires-python = ">=3.8"
+license = { text = "MIT" }
+authors = [
+    { name = "Nautilus", email = "nautilus@example.com" }
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Topic :: Scientific/Engineering :: Mathematics",
+]
+dependencies = [
+    "numpy",
+    "scipy",
+    "matplotlib",
+    "pandas",
+]
 
-# This section tells Python: "Look inside 'src' to find my packages"
+[project.urls]
+"Homepage" = "https://github.com/yourusername/gridfw"
+"Bug Tracker" = "https://github.com/yourusername/gridfw/issues"
+
 [tool.setuptools.packages.find]
 where = ["src"]
+include = ["grad_fw*"]
 
 [tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
